--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap"
         rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
-    <title>Kia Sportage</title>
+    <title>Modern HTML & CSS Template</title>
 </head>
 
 <body>
